editors/tree-sitter-rasmalai/grammar.js
    source_file: $ => repeat($._declaration_or_statement),

    expression: $ => exprAlternatives($, true),

    _condition: $ => exprAlternatives($, false),

    _block_or_statement: $ => choice(
      $.block,
      $.statement,
      $.expression_statement,
    ),

    call_expression: $ => choice(
      seq(
        field('function', choice($.identifier, $.member_expression, $.implicit_member_expression, $.call_expression, $.index_expression)),
        field('type_arguments', $.turbofish),
        $.argument_list,
      ),
      prec(17, seq(
        field('function', choice($.identifier, $.member_expression, $.implicit_member_expression, $.call_expression, $.index_expression)),
        $.argument_list,
      )),
    ),

    trailing_closure_expression: $ => seq(
      field('function', choice($.identifier, $.member_expression, $.implicit_member_expression)),
      field('trailing', $.block),
    ),

    _declaration_or_statement: $ => choice(
      $._declaration,
      $.statement,
      $.expression_statement,
    ),

    function_declaration: $ => seq(
      optional(choice('pub', 'public')),
      optional(choice('async', 'unsafe')),
      'fn',
      field('name', $.identifier),
      optional($.type_parameters),
      $.parameter_list,
      optional(seq(':', $.type)),
      optional('throws'),
      field('body', $.block),
    ),

    parameter_list: $ => seq('(', commaSep($.parameter), ')'),

    parameter: $ => seq(
      optional(choice('pub', 'public', 'private')),
      field('name', choice($.identifier, $.this_expression)),
      optional(seq(':', field('type', $.type))),
      optional(seq('=', field('default', $.expression))),
    ),

    argument_list: $ => seq('(', commaSep($.argument), ')'),

    argument: $ => seq(
      optional(seq(field('name', $.identifier), ':')),
      $.expression,
    ),

    block: $ => seq('{', repeat($._declaration_or_statement), '}'),

    primitive_type: $ => choice('Int', 'Float', 'Bool', 'Void', 'String'),

    type: $ => choice(
      prec.right(6, seq(typeCore($), repeat1('?'))),
      typeCore($),
    ),

    number_literal: $ => choice(
      /0x[0-9a-fA-F_]+/,
      /0b[01_]+/,
      /0o[0-7_]+/,
      /[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9_]+)?/,
      /[0-9][0-9_]*[eE][+-]?[0-9_]+/,
      /[0-9][0-9_]*/,
    ),

    string_literal: $ => choice(seq(
      '"',
      repeat(choice(token(prec(1, /[^"\\${]+/)), '$', /\\u\{[0-9a-fA-F]+\}/, /\\./, $.interpolation)),
      '"',
    )),

    expression_statement: $ => seq($.expression, optional(';')),

    statement: $ => choice(
      $.if_statement,
      $.while_statement,
      $.do_statement,
      $.for_statement,
      $.switch_statement,
      $.assign_statement,
      $.destructure_tuple_statement,
      $.destructure_array_statement,
      $.destructure_record_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.fallthrough_statement,
      $.pass_statement,
      $.defer_statement,
      $.unsafe_block,
      $.guard_statement,
      $.throw_statement,
      $.try_statement,
    ),

    if_statement: $ => prec.right(0, seq(
      'if',
      field('condition', $._condition),
      field('consequence', $._block_or_statement),
      optional(seq('else', field('alternative', $._block_or_statement))),
    )),

    return_statement: $ => seq('return', optional($.expression), optional(';')),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
  },
});
